<resources>
    <string name="app_name">GDSC_HACKATHON</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="desc">Please Sign in using the registered email and password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="get_started">Get Started</string>
    <string name="syllabus">Syllabus</string>
    <string name="logout">logout</string>
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="aboutUs">About us</string>
    <string name="previous">PREVIOUS</string>
    <string name="checkout_modules">Checkout Modules</string>
    <string name="syllabus_title_text">SE 4th SEMESTER 2022</string>
    <string name="checkout_tutorials">Checkout tutorials</string>
    <string name="sign_in_title">Welcome back! \nSign in to continue</string>
    <string name="maths">MATHS</string>
    <string name="design_analysis_of_alogorithms">Design Analysis Of Algorithms</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="computer_networks">Computer Networks</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="checkout_practicals">Checkout Practicals</string>

    <!--Fourth Sem MATHS Modules-->
    Module 1
    <string name="fourth_sem_maths_module_one">Basic Probability</string>
    <string name="fourth_sem_maths_module_one_topic_one_title">Probability spaces</string>
    <string name="fourth_sem_maths_module_one_topic_two_title">Conditional probability</string>
    <string name="fourth_sem_maths_module_one_topic_three_title">Independence</string>
    <string name="fourth_sem_maths_module_one_topic_four_title">Discrete random variables</string>
    <string name="fourth_sem_maths_module_one_topic_five_title">Independent random variables</string>
    <string name="fourth_sem_maths_module_one_topic_six_title">Sums of independent random variables</string>
    <string name="fourth_sem_maths_module_one_topic_seven_title">Expectation of Discrete and Continuous Random Variables</string>
    <string name="fourth_sem_maths_module_one_topic_eight_title">Moments</string>
    <string name="fourth_sem_maths_module_one_topic_nine_title">Variance of a sum</string>
    <string name="fourth_sem_maths_module_one_topic_ten_title">Conditional Probability</string>

    Module 2
    <string name="fourth_sem_maths_module_two">Basic Statistics</string>
    <string name="fourth_sem_maths_module_two_topic_one_title">Measures of Central tendency</string>
    <string name="fourth_sem_maths_module_two_topic_two_title">Moments</string>
    <string name="fourth_sem_maths_module_two_topic_three_title">Skewness and Kurtosis</string>
    <string name="fourth_sem_maths_module_two_topic_four_title">Binomial</string>
    <string name="fourth_sem_maths_module_two_topic_five_title">Poisson and Normal distribution and evaluation of statistical parameters for these three distributions </string>

    Module 3
    <string name="fourth_sem_maths_module_three">Linear Programming problems</string>
    <string name="fourth_sem_maths_module_three_topic_one_title">Types of solutions to linear programming problems</string>
    <string name="fourth_sem_maths_module_three_topic_two_title">Standard form of L.P.P.</string>
    <string name="fourth_sem_maths_module_three_topic_three_title">Simplex method</string>
    <string name="fourth_sem_maths_module_three_topic_four_title">Big M method (Penalty method) to solve L.P.P, Duality</string>
    <string name="fourth_sem_maths_module_three_topic_five_title">Dual simplex method and Revised simplex method to solve L.P.P.</string>

    Module 4
    <string name="fourth_sem_maths_module_four">Applied Statistics</string>
    <string name="fourth_sem_maths_module_four_topic_one_title">Correlation and regression – Rank correlation</string>
    <string name="fourth_sem_maths_module_four_topic_two_title">Curve fitting by the method of least squares- fitting of straight lines</string>
    <string name="fourth_sem_maths_module_four_topic_three_title">Second degree parabolas and more general curves</string>
    <string name="fourth_sem_maths_module_four_topic_four_title">Binomial</string>
    <string name="fourth_sem_maths_module_four_topic_five_title">Poisson and Normal distribution and evaluation of statistical parameters for these three distributions </string>

    Module 5
    <string name="fourth_sem_maths_module_five">Logic</string>
    <string name="fourth_sem_maths_module_five_topic_one_title">Propositions and logical operations</string>
    <string name="fourth_sem_maths_module_five_topic_two_title">Truth tables Equivalence</string>
    <string name="fourth_sem_maths_module_five_topic_three_title">Implications Laws of logic</string>
    <string name="fourth_sem_maths_module_five_topic_four_title">Normal Forms</string>
    <string name="fourth_sem_maths_module_five_topic_five_title">Predicates and Quantifiers </string>
    <string name="fourth_sem_maths_module_five_topic_six_title">Mathematical Induction </string>

    Module 6
    <string name="fourth_sem_maths_module_six">Algebraic Structures</string>-->
    <string name="fourth_sem_maths_module_six_topic_one_title">Algebraic structures with one binary operation</string>
    <string name="fourth_sem_maths_module_six_topic_two_title">Semigroup</string>
    <string name="fourth_sem_maths_module_six_topic_three_title">monoid and group</string>
    <string name="fourth_sem_maths_module_six_topic_four_title">belian group</string>
    <string name="fourth_sem_maths_module_six_topic_five_title">Cyclic groups </string>
    <string name="fourth_sem_maths_module_six_topic_six_title">Homomorphism </string>
    <string name="fourth_sem_maths_module_six_topic_seven_title">Isomorphism </string>
    <string name="fourth_sem_maths_module_six_topic_eight_title">Homomorphism </string>
    <string name="fourth_sem_maths_module_six_topic_nine_title">Field and Extension of field </string>
    <string name="fourth_sem_maths_module_six_topic_ten_title">Coding theory </string>
    <string name="fourth_sem_maths_module_six_topic_eleven_title">Coding of binary information and error detection </string>
    <string name="fourth_sem_maths_module_six_topic_twelve_title">Decoding and error correction </string>


    Tutorial on measure of Central Tendency and Dispersion
    Tutorial on Binomial and Poisson Distribution
    Tutorial on Normal Distribution
    Tutorial on Simplex method
    Tutorial on Dual Simplex method
    Tutorial on Correlation
    Tutorial on Regression
    Tutorial on Curve fitting
    Tutorial on logic operations and truth tables equivalence
    Tutorial on Normal Forms, Predicates and Quantifiers
    Tutorial on Algebraic structures with one binary operation
    Tutorial on Field and Coding theory
    Tutorial
    <string name="mathsTutorialTitle">Maths Tutorials</string>
    <string name="mathsTutorialOne">Conditional  Probability and Bayes theorem </string>
    <string name="mathsTutorialTwo">Discrete random variable</string>
    <string name="mathsTutorialThree">Continuous random variable</string>
    <string name="mathsTutorialFour">Measure of Central Tendency and Dispersion</string>
    <string name="mathsTutorialFive">Binomial and Poisson Distribution</string>
    <string name="mathsTutorialSix">Normal Distribution</string>
    <string name="mathsTutorialSeven">Simplex method</string>
    <string name="mathsTutorialEight">Dual Simplex method</string>
    <string name="mathsTutorialNine">Correlation</string>
    <string name="mathsTutorialTen">Regression</string>
    <string name="mathsTutorialEleven">Curve fitting</string>
    <string name="mathsTutorialTwelve">logic operations and truth tables equivalence</string>
    <string name="mathsTutorialThirteen">Normal Forms, Predicates and Quantifiers</string>
    <string name="mathsTutorialFourteen">Algebraic structures with one binary operation</string>
    <string name="mathsTutorialFifteen">Field and Coding theory</string>

</resources>