<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mathsModuleThreeParentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.syllabus.fourth_sem.maths.MathsTutorialFragment"
    android:background="@color/light_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/tutorialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/tutorialTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                style="@style/title"
                android:text="@string/mathsTutorialTitle" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_one_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorialLayout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_one_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialOne"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_two_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_one_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_two_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialTwo"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_three_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_two_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_three_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialThree"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tutorial_four_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_three_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_four_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialFour"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tutorial_five_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_four_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_five_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialFive"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/tutorial_six_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_five_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_six_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialSix"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_seven_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_six_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_seven_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialSeven"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_eight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_seven_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_eight_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialEight"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_nine_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_eight_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_nine_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialNine"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_ten_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_nine_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_ten_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialTen"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_eleven_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_ten_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_eleven_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialEleven"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_twelve_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_eleven_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_twelve_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialTwelve"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_thirteen_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_twelve_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_thirteen_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialThirteen"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_fourteen_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_thirteen_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_fourteen_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialFourteen"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tutorial_fifteen_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tutorial_fourteen_layout"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_background"
            android:padding="10dp">

            <TextView
                android:id="@+id/tutorial_fifteen_title"
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/mathsTutorialFifteen"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tutorial_fifteen_layout"
            android:padding="100dp" />

    </RelativeLayout>

</ScrollView>